Fix layout issue

--- a/06. admin-dashboard/styles.css
+++ b/06. admin-dashboard/styles.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans&family=Ubuntu:wght@500&display=swap");
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 :root {
   --primary-color: #3081d0;
 }
@@ -7,12 +13,7 @@
 body {
   font-family: "open sans", sans-serif;
   background-color: #b6cadd;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  display: flex;
 }
 
 nav {
@@ -21,8 +22,6 @@ nav {
   background-color: var(--primary-color);
   color: #fff;
   padding: 20px 30px;
-  font-family: "lato", sans-serif;
-  position: fixed;
 }
 
 ul {
@@ -32,17 +31,29 @@ ul {
 
 li {
   padding: 10px;
+  cursor: pointer;
+}
+
+li:hover {
+  background-color: #4d95dd;
 }
 
 i {
   margin-right: 20px;
 }
 
+/* Header section */
+
 header {
   background-color: #fff;
   color: #000;
-  height: 100px;
+  height: 150px;
+  width: 80%;
   -webkit-box-shadow: 0px 8px 24px -13px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 8px 24px -13px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 8px 24px -13px rgba(0, 0, 0, 0.75);
+}
+
+.content {
+  display: flex;
 }
